--- a/src/program/resources/fxml/ConsulterPanier1.fxml
+++ b/src/program/resources/fxml/ConsulterPanier1.fxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.ToolBar?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -9,8 +9,9 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<BorderPane fx:id="mesPaniers" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane fx:id="consulterPanier1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <top>
       <VBox fx:id="header" BorderPane.alignment="CENTER">
          <children>
@@ -35,29 +36,14 @@
       </VBox>
    </top>
    <center>
-      <VBox fx:id="panierButtons" alignment="TOP_CENTER" BorderPane.alignment="CENTER">
+      <VBox fx:id="mesListes" alignment="TOP_CENTER" BorderPane.alignment="CENTER">
          <children>
-            <Button fx:id="consulterListe" mnemonicParsing="false" prefHeight="48.0" prefWidth="224.0" text="Consulter une Liste" textAlignment="CENTER">
+            <Text fx:id="vosListes" strokeType="OUTSIDE" strokeWidth="0.0" text="Vos Listes" textAlignment="CENTER" wrappingWidth="181.99998474121094">
                <font>
-                  <Font size="22.0" />
+                  <Font size="36.0" />
                </font>
-            </Button>
-            <Button fx:id="creerListe" mnemonicParsing="false" prefHeight="48.0" prefWidth="224.0" text="Créer une Liste" textAlignment="CENTER">
-               <font>
-                  <Font size="22.0" />
-               </font>
-               <VBox.margin>
-                  <Insets top="10.0" />
-               </VBox.margin>
-            </Button>
-            <Button fx:id="supprimerListe" mnemonicParsing="false" text="Supprimer une Liste" textAlignment="CENTER">
-               <font>
-                  <Font size="22.0" />
-               </font>
-               <VBox.margin>
-                  <Insets top="10.0" />
-               </VBox.margin>
-            </Button>
+            </Text>
+            <ListView id="ListOfLists" fx:id="ListOfLists" maxWidth="-Infinity" prefHeight="120.0" prefWidth="290.0" />
          </children>
       </VBox>
    </center>
