--- a/src/program/resources/fxml/Stats.fxml
+++ b/src/program/resources/fxml/Stats.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.chart.CategoryAxis?>
 <?import javafx.scene.chart.NumberAxis?>
 <?import javafx.scene.chart.StackedBarChart?>
@@ -8,47 +9,68 @@
 <?import javafx.scene.control.ToolBar?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<VBox xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
-  <children>
-      <ToolBar>
-         <items>
-            <Button defaultButton="true" mnemonicParsing="false" text="Stats" textAlignment="CENTER" />
-            <Button mnemonicParsing="false" text="Mes Listes" textAlignment="CENTER" />
-            <Button mnemonicParsing="false" text="Alertes" textAlignment="CENTER" />
-            <Button mnemonicParsing="false" text="Mon Compte" textAlignment="CENTER" />
-         </items>
-      </ToolBar>
-      <AnchorPane>
+<BorderPane fx:id="mainMenu" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+   <top>
+      <VBox fx:id="header" BorderPane.alignment="CENTER">
          <children>
-            <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="150.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="/program/resources/images/FoodJET.png" />
-               </image>
-            </ImageView>
+            <ToolBar fx:id="toolbar">
+               <items>
+                  <Button mnemonicParsing="false" text="Stats" textAlignment="CENTER" />
+                  <Button mnemonicParsing="false" text="Mes Listes" textAlignment="CENTER" />
+                  <Button mnemonicParsing="false" text="Alertes" textAlignment="CENTER" />
+                  <Button mnemonicParsing="false" text="Mon Compte" textAlignment="CENTER" />
+               </items>
+            </ToolBar>
+            <HBox fx:id="logoBox" alignment="CENTER">
+               <children>
+                  <ImageView fx:id="logo" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="/program/resources/images/FoodJET.png" />
+                     </image>
+                  </ImageView>
+               </children>
+            </HBox>
          </children>
-      </AnchorPane>
-    <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
+      </VBox>
+   </top>
+   <center>
+      <VBox fx:id="tableBox" BorderPane.alignment="CENTER">
          <children>
-            <Text layoutX="14.0" layoutY="33.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Choisissez la durée ">
-               <font>
-                  <Font size="24.0" />
-               </font>
-            </Text>
-            <StackedBarChart layoutY="54.0">
-              <xAxis>
-                <CategoryAxis side="BOTTOM" />
-              </xAxis>
-              <yAxis>
-                <NumberAxis side="LEFT" />
-              </yAxis>
+            <HBox>
+               <children>
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Choisissez la durée ">
+                     <font>
+                        <Font size="24.0" />
+                     </font>
+                  </Text>
+                  <ChoiceBox id="durationBox" fx:id="durationBox" prefWidth="150.0">
+                     <HBox.margin>
+                        <Insets top="5.0" />
+                     </HBox.margin>
+                  </ChoiceBox>
+               </children>
+            </HBox>
+            <StackedBarChart>
+               <xAxis>
+                  <CategoryAxis side="BOTTOM" />
+               </xAxis>
+               <yAxis>
+                  <NumberAxis side="LEFT" />
+               </yAxis>
             </StackedBarChart>
-            <ChoiceBox fx:id="durationBox" layoutX="228.0" layoutY="11.0" prefWidth="150.0" />
          </children>
-    </AnchorPane>
-  </children>
-</VBox>
+      </VBox>
+   </center>
+   <right>
+      <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER" />
+   </right>
+   <left>
+      <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER" />
+   </left>
+</BorderPane>
