--- a/src/program/resources/fxml/Compte.fxml
+++ b/src/program/resources/fxml/Compte.fxml
@@ -26,7 +26,7 @@
                <children>
                   <ImageView fitHeight="174.0" fitWidth="288.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@Polytech/SI3/S6/IHM/FoodGet/src/resources/FoodJET.png" />
+                        <Image url="/program/resources/images/FoodJET.png" />
                      </image>
                   </ImageView>
                </children>
