--- a/src/program/resources/fxml/MesPaniers.fxml
+++ b/src/program/resources/fxml/MesPaniers.fxml
@@ -10,23 +10,23 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane fx:id="mesPaniers" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane fx:id="mesPaniers" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <top>
       <VBox fx:id="header" BorderPane.alignment="CENTER">
          <children>
             <ToolBar fx:id="toolbar">
                <items>
-                  <Button mnemonicParsing="false" text="Stats" textAlignment="CENTER" />
-                  <Button defaultButton="true" mnemonicParsing="false" text="Mes Listes" textAlignment="CENTER" />
-                  <Button mnemonicParsing="false" text="Alertes" textAlignment="CENTER" />
-                  <Button mnemonicParsing="false" text="Mon Compte" textAlignment="CENTER" />
+                  <Button fx:id="Panier_Stats" mnemonicParsing="false" text="Stats" textAlignment="CENTER" />
+                  <Button fx:id="Panier_Liste" defaultButton="true" mnemonicParsing="false" text="Mes Listes" textAlignment="CENTER" />
+                  <Button fx:id="Panier_Alertes" mnemonicParsing="false" text="Alertes" textAlignment="CENTER" />
+                  <Button fx:id="Panier_MonCompte" mnemonicParsing="false" text="Mon Compte" textAlignment="CENTER" />
                </items>
             </ToolBar>
             <HBox fx:id="logoBox" alignment="CENTER">
                <children>
                   <ImageView fx:id="logo" fitHeight="132.0" fitWidth="252.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@../FoodJET.png" />
+                        <Image url="/program/resources/images/FoodJET.png" />
                      </image>
                   </ImageView>
                </children>
