--- a/src/program/resources/fxml/Connection.fxml
+++ b/src/program/resources/fxml/Connection.fxml
@@ -49,12 +49,12 @@
                   <GridPane prefHeight="144.0" prefWidth="151.0" GridPane.columnIndex="1">
                      <rowConstraints>
                         <RowConstraints maxHeight="77.0" minHeight="10.0" prefHeight="21.0" vgrow="SOMETIMES" />
-                        <RowConstraints maxHeight="77.0" minHeight="10.0" prefHeight="44.0" vgrow="SOMETIMES" />:
+                        <RowConstraints maxHeight="77.0" minHeight="10.0" prefHeight="44.0" vgrow="SOMETIMES" />
                         <RowConstraints maxHeight="77.0" minHeight="10.0" prefHeight="43.0" vgrow="SOMETIMES" />
                      </rowConstraints>
                      <children>
-                        <TextField id="usernameBox" fx:id="usernameBox" promptText="Nom d'utilisateur" GridPane.rowIndex="1" />
                         <PasswordField id="passwordBox" fx:id="passwordBox" promptText="Mot de passe" GridPane.rowIndex="2" />
+                        <TextField id="usernameBox" fx:id="usernameBox" promptText="Nom d'utilisateur" GridPane.rowIndex="1" />
                      </children>
                      <columnConstraints>
                         <ColumnConstraints />
