Ajout d'un bouton "Acceuil" Ajout d'un controlleur "Acceuil" Modification du controlleur CommonPageCreator

--- a/src/program/resources/fxml/AjouterDepense-Popup.fxml
+++ b/src/program/resources/fxml/AjouterDepense-Popup.fxml
@@ -3,25 +3,15 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane fx:id="ajouterDepense" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane fx:id="ajouterDepense" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1">
    <top>
-      <HBox fx:id="logoBox" alignment="CENTER" prefHeight="100.0" prefWidth="200.0" BorderPane.alignment="CENTER">
-         <children>
-            <ImageView fx:id="logo" fitHeight="132.0" fitWidth="252.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../FoodJET.png" />
-               </image>
-            </ImageView>
-         </children>
-      </HBox>
+      <HBox fx:id="logoBox" alignment="CENTER" prefHeight="100.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
    </top>
    <center>
       <VBox fx:id="addDepenseBox" alignment="CENTER" BorderPane.alignment="CENTER">
