--- a/src/program/resources/fxml/Alertes.fxml
+++ b/src/program/resources/fxml/Alertes.fxml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.ToolBar?>
 <?import javafx.scene.image.Image?>
@@ -9,16 +8,16 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
 
-<BorderPane fx:id="Mon_Compte" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="537.0" prefWidth="724.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane fx:id="Mon_Compte" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="537.0" prefWidth="724.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1">
    <top>
       <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
          <children>
             <ToolBar prefHeight="40.0" prefWidth="200.0">
               <items>
+                  <Button id="Mon_Compte_Stats" fx:id="Alertes_Accueil" mnemonicParsing="false" text="Accueil" />
                 <Button id="Alertes_Stats" fx:id="Alertes_Stats" mnemonicParsing="false" text="Stats" />
-                  <Button id="Alertes_Panier" fx:id="Alertes_Panier" mnemonicParsing="false" text="Panier" />
+                  <Button id="Alertes_Panier" fx:id="Alertes_Panier" mnemonicParsing="false" text="Mes Listes" />
                   <Button id="Alertes_Alertes" fx:id="Alertes_Alertes" mnemonicParsing="false" text="Alertes" />
                   <Button id="Alertes_Mon_Compte" fx:id="Alertes_Mon_Compte" mnemonicParsing="false" text="Mon Compte" />
               </items>
@@ -48,16 +47,6 @@
       <VBox alignment="CENTER" BorderPane.alignment="CENTER">
          <children>
             <ListView id="Alertes_List" fx:id="Alertes_List" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="400.0" prefWidth="200.0" />
-            <Hyperlink id="Alertes_Retour" fx:id="Alertes_Retour" text="Retour" textAlignment="CENTER" translateY="33.0">
-               <font>
-                  <Font size="20.0" />
-               </font>
-            </Hyperlink>
-            <Hyperlink id="Alertes_Accueil" fx:id="Alertes_Accueil" alignment="CENTER" text="Accueil" translateY="35.0">
-               <font>
-                  <Font size="20.0" />
-               </font>
-            </Hyperlink>
          </children>
       </VBox>
    </center>
