--- a/src/program/resources/fxml/ConsulterPanier1.fxml
+++ b/src/program/resources/fxml/ConsulterPanier1.fxml
@@ -11,12 +11,13 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane fx:id="consulterPanier1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane fx:id="consulterPanier1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1">
    <top>
       <VBox fx:id="header" BorderPane.alignment="CENTER">
          <children>
             <ToolBar fx:id="toolbar">
                <items>
+                  <Button id="Mon_Compte_Stats" fx:id="stats_Accueil" mnemonicParsing="false" text="Accueil" />
                   <Button mnemonicParsing="false" text="Stats" textAlignment="CENTER" />
                   <Button defaultButton="true" mnemonicParsing="false" text="Mes Listes" textAlignment="CENTER" />
                   <Button mnemonicParsing="false" text="Alertes" textAlignment="CENTER" />
