--- a/src/program/resources/fxml/ConsulterPanier2.fxml
+++ b/src/program/resources/fxml/ConsulterPanier2.fxml
@@ -1,47 +1,78 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.ToolBar?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
 
-<VBox xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
-   <children>
-      <ToolBar>
-         <items>
-            <Button fx:id="stats" mnemonicParsing="false" text="Stats" textAlignment="CENTER" />
-            <Button defaultButton="true" mnemonicParsing="false" text="Mes Listes" textAlignment="CENTER" />
-            <Button mnemonicParsing="false" text="Alertes" textAlignment="CENTER" />
-            <Button mnemonicParsing="false" text="Mon Compte" textAlignment="CENTER" />
-         </items>
-      </ToolBar>
-
-      <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
+<BorderPane fx:id="consulterPanier2" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1">
+   <top>
+      <VBox fx:id="header" BorderPane.alignment="CENTER">
          <children>
-            <Text layoutX="76.0" layoutY="26.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Ma Liste 1" textAlignment="CENTER" wrappingWidth="125.99998474121094">
-               <font>
-                  <Font size="26.0" />
-               </font>
-            </Text>
-            <ListView fx:id="listBasket" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="400.0" prefWidth="278.0" />
+            <ToolBar fx:id="consulter_Panier_2_Toolbar" prefHeight="40.0" prefWidth="200.0">
+               <items>
+                  <Button id="Mon_Compte_Stats" fx:id="consulter_Panier_2_Accueil" mnemonicParsing="false" text="Accueil" />
+                  <Button id="Mon_Compte_Stats" fx:id="consulter_Panier_2_Stats" mnemonicParsing="false" text="Stats" />
+                  <Button id="Mon_Compte_Panier" fx:id="consulter_Panier_2_Panier" mnemonicParsing="false" text="Mes Listes" />
+                  <Button id="Mon_Compte_Alertes" fx:id="consulter_Panier_2_Alertes" mnemonicParsing="false" text="Alertes" />
+                  <Button id="Mon_Compte_Mon_Compte" fx:id="consulter_Panier_2_Mon_Compte" mnemonicParsing="false" text="Mon Compte" />
+               </items>
+            </ToolBar>
+            <HBox fx:id="logoBox" alignment="CENTER">
+               <children>
+                  <ImageView fx:id="logo" fitHeight="132.0" fitWidth="252.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../FoodJET.png" />
+                     </image>
+                  </ImageView>
+               </children>
+            </HBox>
          </children>
-      </AnchorPane>
-      <AnchorPane>
+      </VBox>
+   </top>
+   <center>
+      <VBox fx:id="tableBox" alignment="TOP_CENTER" BorderPane.alignment="CENTER">
          <children>
-            <Button fx:id="addDepense" layoutX="126.0" layoutY="6.0" mnemonicParsing="false" text="Ajouter une dépense">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </Button>
-            <Button layoutX="14.0" layoutY="5.0" mnemonicParsing="false" text="Partager">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </Button>
+            <TableView fx:id="tableProduct">
+               <columns>
+                  <TableColumn prefWidth="206.0" text="Produit" />
+                  <TableColumn prefWidth="193.0" text="Prix (€)" />
+               </columns>
+            </TableView>
+            <HBox fx:id="buttonsBox" alignment="CENTER">
+               <children>
+                  <Button fx:id="ajouterDepense" mnemonicParsing="false" text="Ajouter une dépense">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                     <HBox.margin>
+                        <Insets bottom="5.0" left="10.0" top="5.0" />
+                     </HBox.margin>
+                  </Button>
+                  <Button fx:id="share" mnemonicParsing="false" text="Partager">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                     <HBox.margin>
+                        <Insets bottom="5.0" left="40.0" top="5.0" />
+                     </HBox.margin>
+                  </Button>
+               </children>
+            </HBox>
          </children>
-      </AnchorPane>
-   </children>
-</VBox>
+      </VBox>
+   </center>
+   <left>
+      <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER" />
+   </left>
+   <right>
+      <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER" />
+   </right>
+</BorderPane>
