--- a/src/program/resources/fxml/New_mail (1).fxml
+++ b/src/program/resources/fxml/New_mail (1).fxml
@@ -12,14 +12,15 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane fx:id="Mon_Compte" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="537.0" prefWidth="724.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane fx:id="Mon_Compte" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="537.0" prefWidth="724.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1">
    <top>
       <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
          <children>
             <ToolBar prefHeight="40.0" prefWidth="200.0">
               <items>
-                <Button id="New_mail_Stats" fx:id="Mon_Compte_Stats" mnemonicParsing="false" text="Stats" />
-                  <Button id="New_mail_Panier" fx:id="New_mail_Panier" mnemonicParsing="false" text="Panier" />
+                  <Button id="New_mail_Stats" fx:id="New_mail_Accueil" mnemonicParsing="false" text="Accueil" />
+                <Button id="New_mail_Stats" fx:id="New_mail_Stats" mnemonicParsing="false" text="Stats" />
+                  <Button id="New_mail_Panier" fx:id="New_mail_Panier" mnemonicParsing="false" text="Mes Listes" />
                   <Button id="New_mail_Alertes" fx:id="New_mail_Alertes" mnemonicParsing="false" text="Alertes" />
                   <Button id="New_mail_Mon_Compte" fx:id="New_mail_Mon_Compte" mnemonicParsing="false" text="Mon Compte" />
               </items>
@@ -64,11 +65,6 @@
                   </Hyperlink>
                </children>
             </VBox>
-            <Hyperlink id="New_mail_Accueil" fx:id="New_mail_Accueil" alignment="CENTER" text="Accueil" translateY="35.0">
-               <font>
-                  <Font size="20.0" />
-               </font>
-            </Hyperlink>
          </children>
       </VBox>
    </center>
