--- a/src/program/resources/fxml/Stats.fxml
+++ b/src/program/resources/fxml/Stats.fxml
@@ -15,14 +15,15 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane fx:id="Stats" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane fx:id="Stats" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1">
    <top>
       <VBox fx:id="header" BorderPane.alignment="CENTER">
          <children>
             <ToolBar fx:id="stats_Toolbar" prefHeight="40.0" prefWidth="200.0">
                <items>
+                  <Button id="Mon_Compte_Stats" fx:id="stats_Acceuil" mnemonicParsing="false" text="Accueil" />
                   <Button id="Mon_Compte_Stats" fx:id="stats_Stats" mnemonicParsing="false" text="Stats" />
-                  <Button id="Mon_Compte_Panier" fx:id="stats_Panier" mnemonicParsing="false" text="Panier" />
+                  <Button id="Mon_Compte_Panier" fx:id="stats_Panier" mnemonicParsing="false" text="Mes Listes" />
                   <Button id="Mon_Compte_Alertes" fx:id="stats_Alertes" mnemonicParsing="false" text="Alertes" />
                   <Button id="Mon_Compte_Mon_Compte" fx:id="stats_Mon_Compte" mnemonicParsing="false" text="Mon Compte" />
                </items>
