--- a/src/program/resources/fxml/MyInscription.fxml
+++ b/src/program/resources/fxml/MyInscription.fxml
@@ -1,99 +1,146 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Hyperlink?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="478.0" prefWidth="754.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
-   <top>
-      <StackPane prefHeight="50.0" prefWidth="754.0" BorderPane.alignment="CENTER">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="478.0" prefWidth="754.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1">
+   <center>
+      <VBox alignment="CENTER" BorderPane.alignment="CENTER">
          <children>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="INSCRIPTION">
+            <HBox alignment="CENTER">
+               <children>
+                  <VBox>
+                     <children>
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Nom d'utilisateur">
+                           <font>
+                              <Font size="17.0" />
+                           </font>
+                        </Text>
+                        <TextField id="newUsernameBox" fx:id="newUsernameBox" />
+                     </children>
+                     <HBox.margin>
+                        <Insets right="15.0" />
+                     </HBox.margin>
+                  </VBox>
+                  <VBox>
+                     <children>
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="email">
+                           <font>
+                              <Font size="17.0" />
+                           </font>
+                        </Text>
+                        <TextField id="newEmailBox" fx:id="newEmailBox" />
+                     </children>
+                     <HBox.margin>
+                        <Insets left="15.0" />
+                     </HBox.margin>
+                  </VBox>
+               </children>
+               <VBox.margin>
+                  <Insets />
+               </VBox.margin>
+            </HBox>
+            <HBox alignment="CENTER">
+               <children>
+                  <VBox>
+                     <HBox.margin>
+                        <Insets right="15.0" />
+                     </HBox.margin>
+                     <children>
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Nom">
+                           <font>
+                              <Font size="17.0" />
+                           </font>
+                        </Text>
+                        <TextField id="newNameBox" fx:id="newNameBox" />
+                     </children>
+                  </VBox>
+                  <VBox>
+                     <HBox.margin>
+                        <Insets left="15.0" />
+                     </HBox.margin>
+                     <children>
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Prénom">
+                           <font>
+                              <Font size="17.0" />
+                           </font>
+                        </Text>
+                        <TextField id="newFirstNameBox" fx:id="newFirstNameBox" />
+                     </children>
+                  </VBox>
+               </children>
+               <VBox.margin>
+                  <Insets top="20.0" />
+               </VBox.margin>
+            </HBox>
+            <HBox alignment="CENTER">
+               <children>
+                  <VBox>
+                     <HBox.margin>
+                        <Insets right="15.0" />
+                     </HBox.margin>
+                     <children>
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Mot de passe">
+                           <font>
+                              <Font size="17.0" />
+                           </font>
+                        </Text>
+                        <PasswordField fx:id="newPasswordBox" />
+                     </children>
+                  </VBox>
+                  <VBox>
+                     <HBox.margin>
+                        <Insets left="15.0" />
+                     </HBox.margin>
+                     <children>
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Confirmer mot de passe">
+                           <font>
+                              <Font size="17.0" />
+                           </font>
+                        </Text>
+                        <PasswordField fx:id="confirmationPWBox" />
+                     </children>
+                  </VBox>
+               </children>
+               <VBox.margin>
+                  <Insets top="20.0" />
+               </VBox.margin>
+            </HBox>
+            <Label id="emptyFields" fx:id="emptyFields" text="Erreur formulaire">
+               <VBox.margin>
+                  <Insets top="10.0" />
+               </VBox.margin>
                <font>
-                  <Font name="Berlin Sans FB" size="19.0" />
+                  <Font size="18.0" />
                </font>
-            </Text>
+            </Label>
          </children>
-      </StackPane>
-   </top>
-   <left>
-      <Hyperlink id="backToConnectionLink" fx:id="backToConnectionLink" contentDisplay="TOP" text="&lt; Retour" BorderPane.alignment="TOP_CENTER">
+      </VBox>
+   </center>
+   <bottom>
+      <Button id="validateInscriptionButton" fx:id="validateInscriptionButton" alignment="CENTER" mnemonicParsing="false" text="Valider" textAlignment="CENTER" BorderPane.alignment="CENTER">
+         <font>
+            <Font size="19.0" />
+         </font>
+         <BorderPane.margin>
+            <Insets bottom="10.0" />
+         </BorderPane.margin>
+      </Button>
+   </bottom>
+   <top>
+      <Hyperlink id="backToConnectionLink" fx:id="backToConnectionLink" contentDisplay="TOP" text="&lt; Retour" BorderPane.alignment="CENTER">
          <font>
             <Font size="18.0" />
          </font>
       </Hyperlink>
-   </left>
-   <center>
-      <AnchorPane prefHeight="333.0" prefWidth="628.0" BorderPane.alignment="CENTER">
-         <children>
-            <VBox alignment="CENTER" layoutY="1.0" prefHeight="332.8" prefWidth="671.2" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-               <children>
-                  <ImageView fitHeight="356.0" fitWidth="637.0" nodeOrientation="INHERIT" opacity="0.12" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../../../../Documents/SI3/IHM/foodget.png" />
-                     </image>
-                  </ImageView>
-               </children>
-            </VBox>
-            <Text layoutX="25.0" layoutY="52.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nom d'utilisateur" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="33.0">
-               <font>
-                  <Font size="17.0" />
-               </font>
-            </Text>
-            <TextField id="newUsernameBox" fx:id="newUsernameBox" layoutX="25.0" layoutY="67.0" prefHeight="22.0" prefWidth="244.0" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="67.0" />
-            <Text layoutX="347.0" layoutY="51.0" strokeType="OUTSIDE" strokeWidth="0.0" text="email" AnchorPane.rightAnchor="283.78349609375005" AnchorPane.topAnchor="32.0">
-               <font>
-                  <Font size="17.0" />
-               </font>
-            </Text>
-            <TextField id="newEmailBox" fx:id="newEmailBox" layoutX="347.0" layoutY="67.0" prefHeight="22.0" prefWidth="244.0" AnchorPane.rightAnchor="80.20000000000005" AnchorPane.topAnchor="67.0" />
-            <Text layoutX="25.0" layoutY="154.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nom" AnchorPane.leftAnchor="25.0">
-               <font>
-                  <Font size="17.0" />
-               </font>
-            </Text>
-            <TextField id="newNameBox" fx:id="newNameBox" layoutX="25.0" layoutY="169.0" prefHeight="22.0" prefWidth="244.0" AnchorPane.leftAnchor="25.0" />
-            <Text layoutX="347.0" layoutY="153.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Prénom" AnchorPane.rightAnchor="265.65458984375005">
-               <font>
-                  <Font size="17.0" />
-               </font>
-            </Text>
-            <TextField id="newFirstNameBox" fx:id="newFirstNameBox" layoutX="347.0" layoutY="169.0" prefHeight="22.0" prefWidth="244.0" AnchorPane.rightAnchor="80.20000000000005" />
-            <Text layoutX="25.0" layoutY="254.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Mot de passe" AnchorPane.leftAnchor="25.0">
-               <font>
-                  <Font size="17.0" />
-               </font>
-            </Text>
-            <TextField id="newPasswordBox" fx:id="newPasswordBox" layoutX="25.0" layoutY="271.0" prefHeight="22.0" prefWidth="244.0" AnchorPane.leftAnchor="25.0" />
-            <Text layoutX="347.0" layoutY="253.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Confirmer mot de passe" AnchorPane.rightAnchor="144.10625000000005">
-               <font>
-                  <Font size="17.0" />
-               </font>
-            </Text>
-            <TextField id="confirmationPWBox" fx:id="confirmationPWBox" layoutX="347.0" layoutY="271.0" prefHeight="22.0" prefWidth="244.0" AnchorPane.rightAnchor="82.60000000000002" />
-         </children>
-      </AnchorPane>
-   </center>
-   <bottom>
-      <StackPane prefHeight="70.0" prefWidth="754.0" BorderPane.alignment="CENTER">
-         <children>
-            <Button id="validateInscriptionButton" fx:id="validateInscriptionButton" mnemonicParsing="false" prefWidth="85.0" text="Valider" textAlignment="CENTER">
-               <font>
-                  <Font size="19.0" />
-               </font>
-            </Button>
-         </children>
-      </StackPane>
-   </bottom>
-   <right>
-      <VBox prefHeight="358.0" prefWidth="31.0" BorderPane.alignment="CENTER" />
-   </right>
+   </top>
 </BorderPane>
