--- a/src/program/resources/styles/mainStyle.css
+++ b/src/program/resources/styles/mainStyle.css
@@ -1,9 +1,23 @@
 #productExpanditure {
     -fx-font: 16px "Serif";
     -fx-text-fill: rgb(49, 89, 23);
-    -fx-border-color: rgb(49, 89, 23);
-    -fx-border-radius: 40;
     -fx-padding: 3 6 6 6;
+    -fx-cell-hover-color: red;
+}
+
+.list-cell:filled:selected:focused, .list-cell:filled:selected {
+    -fx-background-color: linear-gradient(#328BDB 0%, #207BCF 25%, #1973C9 75%, #0A65BF 100%);
+    -fx-text-fill: white;
+}
+
+.list-cell:odd {
+    -fx-cell-hover-color: #0093ff;
+    -fx-background-color: white;
+}
+
+.list-cell:filled:hover {
+    -fx-background-color: #FFBD4A;
+    -fx-text-fill: red;
 }
 
 #badCredentials {
