Ajout de "MDP Oublié" etc...

--- a/src/program/resources/fxml/MyInscription.fxml
+++ b/src/program/resources/fxml/MyInscription.fxml
@@ -5,14 +5,17 @@
 <?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="478.0" prefWidth="754.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="478.0" prefWidth="754.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <center>
       <VBox alignment="CENTER" BorderPane.alignment="CENTER">
          <children>
@@ -137,10 +140,23 @@
       </Button>
    </bottom>
    <top>
-      <Hyperlink id="backToConnectionLink" fx:id="backToConnectionLink" contentDisplay="TOP" text="&lt; Retour" BorderPane.alignment="CENTER">
-         <font>
-            <Font size="18.0" />
-         </font>
-      </Hyperlink>
+      <SplitPane dividerPositions="0.5" BorderPane.alignment="CENTER">
+         <items>
+            <Hyperlink id="backToConnectionLink" fx:id="backToConnectionLink" contentDisplay="TOP" text="&lt; Retour">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Hyperlink>
+            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+               <children>
+                  <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="/program/resources/images/FoodJET.png" />
+                     </image>
+                  </ImageView>
+               </children>
+            </HBox>
+         </items>
+      </SplitPane>
    </top>
 </BorderPane>
