--- a/src/program/resources/fxml/Compte.fxml
+++ b/src/program/resources/fxml/Compte.fxml
@@ -68,7 +68,7 @@
                   </Hyperlink>
                </children>
             </VBox>
-            <Button mnemonicParsing="false" text="Déconnexion" translateY="20.0" />
+            <Button fx:id="deconnect" mnemonicParsing="false" text="Déconnexion" translateY="20.0" />
          </children>
       </VBox>
    </center>
