ListView Fonctionnelle au menu principal

--- a/src/program/resources/styles/mainStyle.css
+++ b/src/program/resources/styles/mainStyle.css
@@ -6,7 +6,7 @@
 }
 
 .list-cell:filled:selected:focused, .list-cell:filled:selected {
-    -fx-background-color: linear-gradient(#328BDB 0%, #207BCF 25%, #1973C9 75%, #0A65BF 100%);
+    -fx-background-color: #e67300;
     -fx-text-fill: white;
 }
 
@@ -26,4 +26,8 @@
 
 #emptyFields {
     -fx-text-fill: rgb(255, 0, 0);
+}
+
+.list-view:focused{
+    -fx-border-color: black;
 }
