--- a/src/program/resources/fxml/ConsulterPanier2.fxml
+++ b/src/program/resources/fxml/ConsulterPanier2.fxml
@@ -20,7 +20,7 @@
                <items>
                   <Button id="Mon_Compte_Stats" fx:id="consulter_Panier_2_Accueil" mnemonicParsing="false" text="Accueil" />
                   <Button id="Mon_Compte_Stats" fx:id="consulter_Panier_2_Stats" mnemonicParsing="false" text="Stats" />
-                  <Button id="Mon_Compte_Panier" fx:id="consulter_Panier_2_Panier" mnemonicParsing="false" text="Mes Listes" />
+                  <Button id="Mon_Compte_Panier" fx:id="consulter_Panier_2_Panier" defaultButton="true" mnemonicParsing="false" text="Mes Listes" />
                   <Button id="Mon_Compte_Alertes" fx:id="consulter_Panier_2_Alertes" mnemonicParsing="false" text="Alertes" />
                   <Button id="Mon_Compte_Mon_Compte" fx:id="consulter_Panier_2_Mon_Compte" mnemonicParsing="false" text="Mon Compte" />
                </items>
