--- a/src/program/resources/fxml/Stats.fxml
+++ b/src/program/resources/fxml/Stats.fxml
@@ -22,7 +22,7 @@
             <ToolBar fx:id="stats_Toolbar" prefHeight="40.0" prefWidth="200.0">
                <items>
                   <Button id="Mon_Compte_Stats" fx:id="stats_Acceuil" mnemonicParsing="false" text="Accueil" />
-                  <Button id="Mon_Compte_Stats" fx:id="stats_Stats" mnemonicParsing="false" text="Stats" />
+                  <Button id="Mon_Compte_Stats" fx:id="stats_Stats" defaultButton="true" mnemonicParsing="false" text="Stats" />
                   <Button id="Mon_Compte_Panier" fx:id="stats_Panier" mnemonicParsing="false" text="Mes Listes" />
                   <Button id="Mon_Compte_Alertes" fx:id="stats_Alertes" mnemonicParsing="false" text="Alertes" />
                   <Button id="Mon_Compte_Mon_Compte" fx:id="stats_Mon_Compte" mnemonicParsing="false" text="Mon Compte" />
