Ajout d'un seuil de dépense pour la gestion de budget

--- a/src/program/resources/fxml/Alertes.fxml
+++ b/src/program/resources/fxml/Alertes.fxml
@@ -18,7 +18,7 @@
                   <Button id="Mon_Compte_Stats" fx:id="Alertes_Accueil" mnemonicParsing="false" text="Accueil" />
                 <Button id="Alertes_Stats" fx:id="Alertes_Stats" mnemonicParsing="false" text="Stats" />
                   <Button id="Alertes_Panier" fx:id="Alertes_Panier" mnemonicParsing="false" text="Mes Listes" />
-                  <Button id="Alertes_Alertes" fx:id="Alertes_Alertes" mnemonicParsing="false" text="Alertes" />
+                  <Button id="Alertes_Alertes" fx:id="Alertes_Alertes" defaultButton="true" mnemonicParsing="false" text="Alertes" />
                   <Button id="Alertes_Mon_Compte" fx:id="Alertes_Mon_Compte" mnemonicParsing="false" text="Mon Compte" />
               </items>
             </ToolBar>
