--- a/src/program/resources/fxml/MainMenu.fxml
+++ b/src/program/resources/fxml/MainMenu.fxml
@@ -15,7 +15,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane fx:id="mainMenu" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane fx:id="mainMenu" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <top>
       <VBox fx:id="header" BorderPane.alignment="CENTER">
          <children>
@@ -63,9 +63,9 @@
             </HBox>
             <GridPane alignment="CENTER">
                <columnConstraints>
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="127.0" minWidth="0.0" prefWidth="27.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="127.0" minWidth="0.0" prefWidth="26.0" />
                   <ColumnConstraints hgrow="SOMETIMES" maxWidth="400.0" minWidth="400.0" prefWidth="400.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="158.0" minWidth="0.0" prefWidth="24.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="158.0" minWidth="0.0" prefWidth="25.0" />
                </columnConstraints>
                <rowConstraints>
                   <RowConstraints />
@@ -76,7 +76,12 @@
             </GridPane>
             <HBox fx:id="buttonsBox" alignment="CENTER">
                <children>
-                  <Button fx:id="addDepense" mnemonicParsing="false" text="Ajouter une dépense">
+                  <Button id="moneyThreshold" fx:id="moneyThreshold" minWidth="-Infinity" mnemonicParsing="false" prefWidth="150.0" text="Seuil de dépense">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Button>
+                  <Button fx:id="addDepense" minWidth="-Infinity" mnemonicParsing="false" prefWidth="150.0" text="Ajouter une dépense">
                      <font>
                         <Font size="14.0" />
                      </font>
