--- a/src/program/resources/fxml/ConsulterMesListes.fxml
+++ b/src/program/resources/fxml/ConsulterMesListes.fxml
@@ -1,17 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.ToolBar?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane fx:id="consulterPanier1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane fx:id="consulterPanier1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="580.0" prefWidth="720.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <top>
       <VBox fx:id="header" BorderPane.alignment="CENTER">
          <children>
@@ -26,7 +30,7 @@
             </ToolBar>
             <HBox fx:id="logoBox" alignment="CENTER">
                <children>
-                  <ImageView fx:id="logo" fitHeight="132.0" fitWidth="252.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fx:id="logo" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="/program/resources/images/FoodJET.png" />
                      </image>
@@ -37,15 +41,47 @@
       </VBox>
    </top>
    <center>
-      <VBox fx:id="mesListes" alignment="TOP_CENTER" BorderPane.alignment="CENTER">
+      <VBox fx:id="mesListes" alignment="TOP_CENTER" minHeight="-Infinity" prefHeight="100.0" BorderPane.alignment="CENTER">
          <children>
-            <Text fx:id="vosListes" strokeType="OUTSIDE" strokeWidth="0.0" text="Vos Listes" textAlignment="CENTER" wrappingWidth="181.99998474121094">
-               <font>
-                  <Font size="36.0" />
-               </font>
-            </Text>
-            <ListView id="ListOfLists" fx:id="ListOfLists" maxWidth="-Infinity" prefHeight="120.0" prefWidth="290.0" />
+            <Label id="sharedListLabel" fx:id="sharedListLabel" text="sharedListLabel" />
+            <HBox alignment="CENTER" prefHeight="88.0" prefWidth="520.0">
+               <children>
+                  <Text fx:id="vosListes" strokeType="OUTSIDE" strokeWidth="0.0" text="Vos Listes" textAlignment="CENTER" wrappingWidth="181.99998474121094">
+                     <font>
+                        <Font size="36.0" />
+                     </font>
+                  </Text>
+               </children>
+            </HBox>
+            <GridPane alignment="CENTER" maxWidth="1.7976931348623157E308" prefHeight="300.0" prefWidth="500.0">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="140.0" minWidth="10.0" prefWidth="84.0" />
+                <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="484.0" minWidth="500.0" prefWidth="500.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="140.0" minWidth="10.0" prefWidth="84.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <ListView id="ListOfLists" fx:id="ListOfLists" maxWidth="-Infinity" prefHeight="350.0" prefWidth="500.0" GridPane.columnIndex="1" GridPane.halignment="CENTER" />
+               </children>
+            </GridPane>
+            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+               <children>
+                  <Button id="createListPopup" fx:id="createListPopup" alignment="CENTER" mnemonicParsing="false" prefHeight="40.0" prefWidth="175.0" text="Créer une Liste" textAlignment="CENTER">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </Button>
+               </children>
+            </HBox>
          </children>
       </VBox>
    </center>
+   <left>
+      <VBox prefHeight="200.0" prefWidth="75.0" BorderPane.alignment="CENTER" />
+   </left>
+   <right>
+      <VBox prefHeight="200.0" prefWidth="75.0" BorderPane.alignment="CENTER" />
+   </right>
 </BorderPane>
