--- a/src/program/resources/fxml/CreerListe-Popup.fxml
+++ b/src/program/resources/fxml/CreerListe-Popup.fxml
@@ -12,25 +12,25 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane fx:id="creerListe" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane fx:id="creerListe" prefHeight="214.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <left>
-      <VBox fx:id="leftVbox" prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER" />
+      <VBox fx:id="leftVbox" prefWidth="50.0" BorderPane.alignment="CENTER" />
    </left>
    <center>
-      <VBox fx:id="createNewList" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" BorderPane.alignment="CENTER">
+      <VBox fx:id="createNewList" alignment="CENTER" minWidth="-Infinity" prefWidth="200.0" BorderPane.alignment="CENTER">
          <children>
-            <HBox fx:id="nomListe" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
+            <HBox alignment="CENTER">
                <children>
-                  <Text fx:id="listName" strokeType="OUTSIDE" strokeWidth="0.0" text="Nom de la liste" textAlignment="CENTER" wrappingWidth="399.8828125">
+                  <Text fx:id="listNameField" strokeType="OUTSIDE" strokeWidth="0.0" text="Nom de la liste">
                      <font>
                         <Font size="24.0" />
                      </font>
                   </Text>
                </children>
             </HBox>
-            <TextField fx:id="listField" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="40.0" prefWidth="300.0" />
+            <TextField fx:id="listField" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="40.0" prefWidth="300.0" promptText="Nom de la liste" />
             <Label fx:id="Echec" alignment="CENTER" maxWidth="1.7976931348623157E308" minWidth="-Infinity" text="Echec" />
-            <HBox fx:id="buttonsHbox" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="83.0" prefWidth="200.0">
+            <HBox fx:id="buttonsHbox" alignment="CENTER">
                <children>
                   <GridPane fx:id="buttonsPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="83.0" prefWidth="414.0">
                     <columnConstraints>
@@ -59,6 +59,9 @@
       </VBox>
    </center>
    <right>
-      <VBox fx:id="rightVbox" prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER" />
+      <VBox fx:id="rightVbox" prefWidth="50.0" BorderPane.alignment="CENTER" />
    </right>
+   <top>
+      <HBox BorderPane.alignment="CENTER" />
+   </top>
 </BorderPane>
