--- a/src/program/resources/fxml/ConsulterMesListes.fxml
+++ b/src/program/resources/fxml/ConsulterMesListes.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
@@ -66,15 +67,6 @@
                   <ListView id="ListOfLists" fx:id="ListOfLists" maxWidth="-Infinity" prefHeight="350.0" prefWidth="500.0" GridPane.columnIndex="1" GridPane.halignment="CENTER" />
                </children>
             </GridPane>
-            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
-               <children>
-                  <Button id="createListPopup" fx:id="createListPopup" alignment="CENTER" mnemonicParsing="false" prefHeight="40.0" prefWidth="175.0" text="Créer une Liste" textAlignment="CENTER">
-                     <font>
-                        <Font size="18.0" />
-                     </font>
-                  </Button>
-               </children>
-            </HBox>
          </children>
       </VBox>
    </center>
@@ -84,4 +76,18 @@
    <right>
       <VBox prefHeight="200.0" prefWidth="75.0" BorderPane.alignment="CENTER" />
    </right>
+   <bottom>
+      <HBox alignment="CENTER" BorderPane.alignment="CENTER">
+         <children>
+            <Button id="createListPopup" fx:id="createListPopup" alignment="CENTER" mnemonicParsing="false" prefHeight="40.0" prefWidth="175.0" text="Créer une Liste" textAlignment="CENTER">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Button>
+         </children>
+         <BorderPane.margin>
+            <Insets bottom="10.0" top="10.0" />
+         </BorderPane.margin>
+      </HBox>
+   </bottom>
 </BorderPane>
